Fixed footer line spacing

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -66,7 +66,6 @@ html {
 ================================================================== */
 
 .franklin-content .page-foot a {
-  text-decoration: none;
   /* color: #a6a2a0; */
   color: #429FFF;
   text-decoration: none;
@@ -79,7 +78,7 @@ html {
   text-align: center;
   margin-top: 4em;
   border-top: 0.5px solid lightgrey;
-  padding-top: 2em;
+  padding-top: 0em;
   margin-bottom: 4em;
 }
 
